--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <span class="line mb-5"></span>
                 <ul class="mt40 info list-unstyled">
                     <li><span>Birthdate</span> : 12/12/1988</li>
-                    <li><span>Email</span> : skk121288@gmail.com</li>
+                    <li><span>Email</span> : shubbham.agarwal@gmail.com</li>
                     <li><span>Phone</span> : + (91) 9870631482</li>
                     <li><span>Address</span> :  Bangalore, Karnataka (India) </li>
                 </ul>
