--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <div class="col-1 text-danger pt-1"><i class="ti-home icon-lg"></i></div>
                     <div class="col-10 ml-auto mr-3">
                         <h6>UnderGround Station</h6>
-                        <p class="subtitle">Diaphragm Walls, Secant piles, Base slab.</p>
+                        <p class="subtitle">Diaphragm Walls, Secant piles, Slabs.</p>
                         <hr>
                     </div>
                 </div>
@@ -120,7 +120,7 @@
                         <div class="card-body">
                             <h6 class="title text-danger">Jan 2019 - Present</h6>
                             <P>Assistant Engineer</P>
-                            <P class="subtitle">Overall Responsible for Execution and planning of Reach-6 (Dairy Circle) Underground Station- Utility & Road diversion construction, Barricading and traffic management, Secant Piling, Waler Beam, Rock anchor grouting & Stressing, Excavation, Base Slab, etc. Visual representation of progress of site for easy tracking (Using Tableau)</P>
+                            <P class="subtitle">Overall Responsible for Execution and planning of Underground Station- Utility & Road diversion construction, Barricading and traffic management, Diaphragm Walls & Secant Piling, Waler Beam, Rock anchor grouting & Stressing, Excavation, Base Slab, etc. Visual representation of progress of site for easy tracking (Using Tableau)</P>
                             <hr>
                             <h6 class="title text-danger">Feb 2013 - Dec 2018</h6>
                             <P>Site Execution Engineer</P>
