--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <h4 class="header-subtitle" >Hello, I am</h4>
                 <h1 class="header-title">Shubham Agarwal</h1>
                 <h6 class="header-subtitle" >Professional Civil Engineer</h6>
-                <a href="https://drive.google.com/file/d/1yEZtQLg7pOmaw8tp_0dZjK5WjB8ic90H/view?usp=share_link" class="btn btn-primary btn-rounded" role="button" aria-pressed="true">Print Resume</a>
+                <a href="https://drive.google.com/file/d/1yEZtQLg7pOmaw8tp_0dZjK5WjB8ic90H/view?usp=drive_link" class="btn btn-primary btn-rounded" role="button" aria-pressed="true">Print Resume</a>
             </div>
         </div>
     </header>
