--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="col-lg-4 about-card">
                 <h3 class="font-weight-light">Who am I ?</h3>
                 <span class="line mb-5"></span>
-                <h7 class="mb-3">Professional Civil Engineer who seeks a challenging position in the organization, prove my potential and emerge as a competent professional. To excel in the field of civil engineering and grow with the developing organization.</h5>
+                <h7 class="mb-3">Confident Construction Engineer with 12 years of experience managing commercial projects to detailed specifications and deadlines. Expertly supervising construction activities, preparing site reports, recruiting personnel, arranging contractor and ensuring procurement of material for optimum productivity and profitability.</h5>
             </div>
             <div class="col-lg-4 about-card">
                 <h3 class="font-weight-light">Personal Info</h3>
