--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <li><span>Birthdate</span> : 12/12/1988</li>
                     <li><span>Email</span> : shubbham.agarwal@gmail.com</li>
                     <li><span>Phone</span> : + (91) 9870631482</li>
-                    <li><span>Address</span> :  Bangalore, Karnataka (India) </li>
+                    <li><span>Address</span> :  Surat, Gujarat (India) </li>
                 </ul>
                 <ul class="social-icons pt-3">
                 </ul>  
@@ -118,9 +118,13 @@
                             </div>
                         </div>
                         <div class="card-body">
-                            <h6 class="title text-danger">Jan 2019 - Present</h6>
+			    <h6 class="title text-danger">Jul 2023 - Present</h6>
+                            <P>Section Engineer</P>
+                            <P class="subtitle">Conducted quality inspections for UG Station, Ramp, and Cut/Cover structures, ensuring adherence to construction standards. Facilitated piling works, excavation processes, and the installation of struts, walers, and Kingpost at progressive levels.</P>
+                            <hr>
+                            <h6 class="title text-danger">Jan 2019 - Jun 2023</h6>
                             <P>Assistant Engineer</P>
-                            <P class="subtitle">Overall Responsible for Execution and planning of Underground Station- Utility & Road diversion construction, Barricading and traffic management, Diaphragm Walls & Secant Piling, Waler Beam, Rock anchor grouting & Stressing, Excavation, Base Slab, etc. Visual representation of progress of site for easy tracking (Using Tableau)</P>
+                            <P class="subtitle">Overall Responsible for Execution and planning of Underground Station- Utility & Road diversion construction, Barricading and traffic management, Diaphragm Walls & Secant Piling, Waler Beam, Rock anchor grouting & Stressing, Excavation, Base Slab, etc. Visual representation of progress of site for easy tracking</P>
                             <hr>
                             <h6 class="title text-danger">Feb 2013 - Dec 2018</h6>
                             <P>Site Execution Engineer</P>
