--- a/index.html
+++ b/index.html
@@ -119,19 +119,19 @@
                         </div>
                         <div class="card-body">
 			    <h6 class="title text-danger">Jul 2023 - Present</h6>
-                            <P>Section Engineer</P>
+                            <P>Section Engineer(SYSTRA-MVA CONSULTING INDIA P LTD)</P>
                             <P class="subtitle">Conducted quality inspections for UG Station, Ramp, and Cut/Cover structures, ensuring adherence to construction standards. Facilitated piling works, excavation processes, and the installation of struts, walers, and Kingpost at progressive levels.</P>
                             <hr>
                             <h6 class="title text-danger">Jan 2019 - Jun 2023</h6>
-                            <P>Assistant Engineer</P>
+                            <P>Assistant Engineer(BMRCL)</P>
                             <P class="subtitle">Overall Responsible for Execution and planning of Underground Station- Utility & Road diversion construction, Barricading and traffic management, Diaphragm Walls & Secant Piling, Waler Beam, Rock anchor grouting & Stressing, Excavation, Base Slab, etc. Visual representation of progress of site for easy tracking</P>
                             <hr>
                             <h6 class="title text-danger">Feb 2013 - Dec 2018</h6>
-                            <P>Site Execution Engineer</P>
+                            <P>Site Execution Engineer(AFCONS INFRASTRUCTURE LTD)</P>
                             <P class="subtitle">Construction of elevated and underground metro structures</P>
                             <hr>
                             <h6 class="title text-danger">Jun 2011 - Feb 2013</h6>
-                            <P>Site Execution Engineer</P>
+                            <P>Site Execution Engineer(VALECHA ENGINEERING LTD)</P>
                             <P class="subtitle">Construction of underground metro station</P>
                         </div>
                     </div>
